--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ section+section { margin-top: 50px; }
 /*------------- Top bar----------------*/
 #top {
 	width: 100%;
-	background: #90c322;
+	background: #000000;
 	font-size: 12px;
 	color: #fff;
 	padding: 5px 0;
@@ -111,7 +111,7 @@ header {
 }
 .cart .dropdown {
 	padding: 10px;
-	
+
 }
 .cart .dropup .caret {
 	margin-top: -36px;
@@ -238,16 +238,16 @@ header {
 	-moz-transform: translateY(10px);
 	transform: translateY(10px);
 }
-.nav-main > li::before, 
+.nav-main > li::before,
 .nav-main > li::after {
 	position: absolute;
 	left: 0;
 	width: 100%;
 	height: 2px;
-	background: #90c322;
+	background: #000000;
 	content: '';
 	opacity: 0;
-	-webkit-transition: opacity 0.3s, 
+	-webkit-transition: opacity 0.3s,
 	-webkit-transform 0.3s;
 	-moz-transition: opacity 0.3s, -moz-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
@@ -257,10 +257,10 @@ header {
 	opacity: 1;
 	-webkit-transform: translateY(0px);
 	-moz-transform: translateY(0px);
-	transform: translateY(0px);	
+	transform: translateY(0px);
 }
 .nav-main > li a:hover, .nav-main > li a:focus {
-	color: #90c322;
+	color: #000000;
 }
 .nav-main > li a {
 	padding: 20px 15px;
@@ -290,8 +290,8 @@ header {
 	color: #fff;
 }
 .navbar-nav .active {
-	border-top: 2px solid #90c322;
-	border-bottom: 2px solid #90c322;
+	border-top: 2px solid #000000;
+	border-bottom: 2px solid #000000;
 	margin: -1px 0;
 }
 .navbar-nav .active a {
@@ -299,7 +299,7 @@ header {
 }
 .nav-main .dropdown-menu li a:hover {
 	color: #fff;
-	background: #90c322;
+	background: #000000;
 }
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
@@ -362,7 +362,7 @@ header {
 .nivo-caption {
 	background: none;
 }
-.nivo-directionNav a{ 
+.nivo-directionNav a{
 	display: block;
 }
 .nivoSlider {
@@ -498,7 +498,7 @@ header {
 .products a h4:hover {
 	color: #90c322;
 }
-#products + section{ 
+#products + section{
 	margin-top: 20px;
 	margin-bottom: 30px;
 }
@@ -678,7 +678,7 @@ footer .block span {
 	-ms-transition: .2s ease-in-out;
 	-o-transition: .2s ease-in-out;
 	transition: .2s ease-in-out;
-	
+
 }
 .shutter:before {
 	width: 100%;
@@ -702,7 +702,7 @@ footer .block span {
 }
 .shutter:hover {
 	color: #fff;
-	
+
 }
 
 .btn-transparent {
@@ -834,12 +834,12 @@ footer .block span {
 
 
 
- 
+
 #blog .blog-zone {
     margin: 30px 0 0 0;
     position: relative;
-} 
- 
+}
+
 /* The line */
 #blog .blog-zone:before {
     content: '';
@@ -851,11 +851,11 @@ footer .block span {
     left: 1%;
     margin-left: -8px;
 }
- 
+
 #blog .blog-zone > li {
     position: relative;
 }
- 
+
 /* The date/time */
 #blog .blog-zone > li .cbp_tmtime {
     display: block;
@@ -863,24 +863,24 @@ footer .block span {
     padding-right: 100px;
     position: absolute;
 }
- 
+
 #blog .blog-zone > li .cbp_tmtime span {
     display: block;
     text-align: right;
 }
- 
+
 #blog .blog-zone > li .cbp_tmtime span:first-child {
     font-size: 0.9em;
     color: #bdd0db;
 }
- 
+
 #blog .blog-zone > li .cbp_tmtime span:last-child {
     font-size: 2.9em;
     color: #90c322;
 }
- 
 
- 
+
+
 /* Right content */
 #blog .blog-zone > li .blog-box {
     margin: 0 0 30px 8%;
@@ -894,19 +894,19 @@ footer .block span {
     position: relative;
     border-radius: 2px;
 }
- 
+
 #blog .blog-zone > li:nth-child(odd) .blog-box {
     background: #fff;
     border: 1px solid #dedede;
 }
- 
- 
 
- 
+
+
+
 #blog .blog-zone > li:nth-child(odd) .blog-box:after {
     border-right-color: #90c322;
 }
- 
+
 /* The icons */
 #blog .blog-zone > li .blog-icon {
     width: 40px;
@@ -924,7 +924,7 @@ footer .block span {
     margin: 0 0 0 -25px;
 }
 
- 
+
 
 
 
@@ -1132,13 +1132,13 @@ footer .block span {
     ==================================================*/
 
 
- 
- 
+
+
 
 .product-grid ul {
     text-align: center;
 }
- 
+
 .product-grid ul li {
     width: 33%;
     text-align: center;
@@ -1146,7 +1146,7 @@ footer .block span {
     display: inline-block;
     vertical-align: top;
 }
- 
+
 @media screen and (max-width: 57em) {
     .product-grid ul li {
         width: 49%;
@@ -1185,7 +1185,7 @@ footer .block span {
 
 }
 #single-product .nav-tabs {
-	margin-top:30px; 
+	margin-top:30px;
 }
 #single-product  .nav-tabs .active a {
 	background: #90c322;
@@ -1193,9 +1193,9 @@ footer .block span {
 }
 #single-product  .nav-tabs li a {
 	color: #333;
-	border-top:1px solid #dedede; 
-	border-left:1px solid #dedede; 
-	border-right:1px solid #dedede; 
+	border-top:1px solid #dedede;
+	border-left:1px solid #dedede;
+	border-right:1px solid #dedede;
 }
 .single-product-img {
 	border:1px solid #dedede;
